--- a/Lab1-EMcGarry.html
+++ b/Lab1-EMcGarry.html
@@ -11,6 +11,7 @@
   <h4>I cook a lot of food.</h4>
   <h5>I'm good at fun facts.</h5>
   <h6>And I'm legitimately excited to learn some foundations of web development.</h6>
+  <p>This line is a paragraph.</p>
 </body>
 </html>
 </html>
