--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>ITMD-361 Internet Technologies and Web Design</title>
 </head>
 <body>
-  <h1>Well hi there. I'm Ethan.</h1>
+  <h1>Well hi there. I'm Ethan. This is my first website.</h1>
   <h2>I'm a third year ITM major.</h2>
   <h3>I eat a lot of food.</h3>
   <h4>I cook a lot of food.</h4>
